<resources>
    <string name="app_name">UMTE-projekt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_vypis_skladu">VypisSkladu</string>
    <string name="title_activity_form_sklad">FormSklad</string>
    <string name="fromular">fromular</string>
    <string name="nazev_dilu">nazev dilu</string>
    <string name="druh_dilu">druh dilu</string>
    <string name="typ_dilu">typ dilu</string>
    <string name="vyrobce">vyrobce</string>
    <string name="vypis_skladu" />
    <string name="skenovat_qr">Skenovat QR</string>
    <string name="vymaz">Vymaz</string>
    <string name="ok">OK</string>
    <string name="odhlasit">Odhlasit</string>
    <string name="vypi_skladu">vypi skladu</string>
    <string name="title_activity_admin">ActivityAdmin</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_reklamace">ActivityReklamace</string>
    <string name="title_activity_form_skald">ActivityFormSkald</string>
</resources>